--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
